// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`exportSVG > snapshot: 2x2 grid of 1u keys 1`] = `
"<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 128 128" width="128" height="128" style="max-width:100%;height:auto" role="img" aria-label="Untitled">
  <defs><linearGradient id="grad_cccccc" x1="0%" y1="0%" x2="0%" y2="100%">
      <stop offset="0%" stop-color="rgb(212,212,212)" />
      <stop offset="30%" stop-color="#cccccc" />
      <stop offset="85%" stop-color="rgb(184,184,184)" />
      <stop offset="100%" stop-color="rgb(167,167,167)" />
    </linearGradient><linearGradient id="key-highlight" x1="0%" y1="0%" x2="0%" y2="100%">
    <stop offset="0%" stop-color="rgba(255,255,255,0.35)" />
    <stop offset="50%" stop-color="rgba(255,255,255,0)" />
  </linearGradient></defs>
  <!-- Background -->
  <rect width="100%" height="100%" fill="#ffffff" rx="6" />
  <!-- Grid -->
  <g opacity="0.6"><line x1="0" y1="0" x2="0" y2="128" stroke="#e8e8e8" stroke-width="0.5" /><line x1="54" y1="0" x2="54" y2="128" stroke="#e8e8e8" stroke-width="0.5" /><line x1="108" y1="0" x2="108" y2="128" stroke="#e8e8e8" stroke-width="0.5" /><line x1="0" y1="0" x2="128" y2="0" stroke="#e8e8e8" stroke-width="0.5" /><line x1="0" y1="54" x2="128" y2="54" stroke="#e8e8e8" stroke-width="0.5" /><line x1="0" y1="108" x2="128" y2="108" stroke="#e8e8e8" stroke-width="0.5" /></g>
  <!-- Keys (rendered bottom-to-top for depth order) -->
  <g><rect x="2" y="3" width="50" height="50" rx="4" fill="rgba(0,0,0,0.15)" /><rect x="2" y="2" width="50" height="50" rx="4" fill="url(#grad_cccccc)" stroke="rgb(163,163,163)" stroke-width="0.8" /><rect x="2" y="2" width="50" height="10" rx="4" fill="url(#key-highlight)" /><text x="27" y="28" text-anchor="middle" dominant-baseline="central" font-size="7" fill="rgba(0,0,0,0.15)" font-family="monospace">—</text></g><g><rect x="56" y="3" width="50" height="50" rx="4" fill="rgba(0,0,0,0.15)" /><rect x="56" y="2" width="50" height="50" rx="4" fill="url(#grad_cccccc)" stroke="rgb(163,163,163)" stroke-width="0.8" /><rect x="56" y="2" width="50" height="10" rx="4" fill="url(#key-highlight)" /><text x="81" y="28" text-anchor="middle" dominant-baseline="central" font-size="7" fill="rgba(0,0,0,0.15)" font-family="monospace">—</text></g><g><rect x="2" y="57" width="50" height="50" rx="4" fill="rgba(0,0,0,0.15)" /><rect x="2" y="56" width="50" height="50" rx="4" fill="url(#grad_cccccc)" stroke="rgb(163,163,163)" stroke-width="0.8" /><rect x="2" y="56" width="50" height="10" rx="4" fill="url(#key-highlight)" /><text x="27" y="82" text-anchor="middle" dominant-baseline="central" font-size="7" fill="rgba(0,0,0,0.15)" font-family="monospace">—</text></g><g><rect x="56" y="57" width="50" height="50" rx="4" fill="rgba(0,0,0,0.15)" /><rect x="56" y="56" width="50" height="50" rx="4" fill="url(#grad_cccccc)" stroke="rgb(163,163,163)" stroke-width="0.8" /><rect x="56" y="56" width="50" height="10" rx="4" fill="url(#key-highlight)" /><text x="81" y="82" text-anchor="middle" dominant-baseline="central" font-size="7" fill="rgba(0,0,0,0.15)" font-family="monospace">—</text></g>
  <!-- Attribution -->
  <text x="124" y="124" text-anchor="end" font-size="7" fill="#ccc" font-family="sans-serif">Generated by Keyboard Dev Toolkit</text>
</svg>"
`;

exports[`exportSVG > snapshot: colored key with custom c and t 1`] = `
"<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 74 74" width="74" height="74" style="max-width:100%;height:auto" role="img" aria-label="Untitled">
  <defs><linearGradient id="grad_ff6600" x1="0%" y1="0%" x2="0%" y2="100%">
      <stop offset="0%" stop-color="rgb(255,125,38)" />
      <stop offset="30%" stop-color="#ff6600" />
      <stop offset="85%" stop-color="rgb(230,92,0)" />
      <stop offset="100%" stop-color="rgb(209,84,0)" />
    </linearGradient><linearGradient id="key-highlight" x1="0%" y1="0%" x2="0%" y2="100%">
    <stop offset="0%" stop-color="rgba(255,255,255,0.35)" />
    <stop offset="50%" stop-color="rgba(255,255,255,0)" />
  </linearGradient></defs>
  <!-- Background -->
  <rect width="100%" height="100%" fill="#ffffff" rx="6" />
  <!-- Grid -->
  <g opacity="0.6"><line x1="0" y1="0" x2="0" y2="74" stroke="#e8e8e8" stroke-width="0.5" /><line x1="54" y1="0" x2="54" y2="74" stroke="#e8e8e8" stroke-width="0.5" /><line x1="0" y1="0" x2="74" y2="0" stroke="#e8e8e8" stroke-width="0.5" /><line x1="0" y1="54" x2="74" y2="54" stroke="#e8e8e8" stroke-width="0.5" /></g>
  <!-- Keys (rendered bottom-to-top for depth order) -->
  <g><rect x="2" y="3" width="50" height="50" rx="4" fill="rgba(0,0,0,0.15)" /><rect x="2" y="2" width="50" height="50" rx="4" fill="url(#grad_ff6600)" stroke="rgb(204,82,0)" stroke-width="0.8" /><rect x="2" y="2" width="50" height="10" rx="4" fill="url(#key-highlight)" /><text x="27" y="28" text-anchor="middle" dominant-baseline="central" font-size="7" fill="rgba(0,0,0,0.15)" font-family="monospace">—</text></g>
  <!-- Attribution -->
  <text x="70" y="70" text-anchor="end" font-size="7" fill="#ccc" font-family="sans-serif">Generated by Keyboard Dev Toolkit</text>
</svg>"
`;

exports[`exportSVG > snapshot: decal key (d: true) 1`] = `
"<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 74 74" width="74" height="74" style="max-width:100%;height:auto" role="img" aria-label="Untitled">
  <defs><linearGradient id="grad_cccccc" x1="0%" y1="0%" x2="0%" y2="100%">
      <stop offset="0%" stop-color="rgb(212,212,212)" />
      <stop offset="30%" stop-color="#cccccc" />
      <stop offset="85%" stop-color="rgb(184,184,184)" />
      <stop offset="100%" stop-color="rgb(167,167,167)" />
    </linearGradient><linearGradient id="key-highlight" x1="0%" y1="0%" x2="0%" y2="100%">
    <stop offset="0%" stop-color="rgba(255,255,255,0.35)" />
    <stop offset="50%" stop-color="rgba(255,255,255,0)" />
  </linearGradient></defs>
  <!-- Background -->
  <rect width="100%" height="100%" fill="#ffffff" rx="6" />
  <!-- Grid -->
  <g opacity="0.6"><line x1="0" y1="0" x2="0" y2="74" stroke="#e8e8e8" stroke-width="0.5" /><line x1="54" y1="0" x2="54" y2="74" stroke="#e8e8e8" stroke-width="0.5" /><line x1="0" y1="0" x2="74" y2="0" stroke="#e8e8e8" stroke-width="0.5" /><line x1="0" y1="54" x2="74" y2="54" stroke="#e8e8e8" stroke-width="0.5" /></g>
  <!-- Keys (rendered bottom-to-top for depth order) -->
  <g stroke-dasharray="3,2"><rect x="2" y="3" width="50" height="50" rx="4" fill="rgba(0,0,0,0.15)" /><rect x="2" y="2" width="50" height="50" rx="4" fill="url(#grad_cccccc)" stroke="rgb(163,163,163)" stroke-width="0.8" /><rect x="2" y="2" width="50" height="10" rx="4" fill="url(#key-highlight)" /><text x="27" y="28" text-anchor="middle" dominant-baseline="central" font-size="7" fill="rgba(0,0,0,0.15)" font-family="monospace">—</text></g>
  <!-- Attribution -->
  <text x="70" y="70" text-anchor="end" font-size="7" fill="#ccc" font-family="sans-serif">Generated by Keyboard Dev Toolkit</text>
</svg>"
`;

exports[`exportSVG > snapshot: ghosted key (g: true) 1`] = `
"<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 74 74" width="74" height="74" style="max-width:100%;height:auto" role="img" aria-label="Untitled">
  <defs><linearGradient id="grad_cccccc" x1="0%" y1="0%" x2="0%" y2="100%">
      <stop offset="0%" stop-color="rgb(212,212,212)" />
      <stop offset="30%" stop-color="#cccccc" />
      <stop offset="85%" stop-color="rgb(184,184,184)" />
      <stop offset="100%" stop-color="rgb(167,167,167)" />
    </linearGradient><linearGradient id="key-highlight" x1="0%" y1="0%" x2="0%" y2="100%">
    <stop offset="0%" stop-color="rgba(255,255,255,0.35)" />
    <stop offset="50%" stop-color="rgba(255,255,255,0)" />
  </linearGradient></defs>
  <!-- Background -->
  <rect width="100%" height="100%" fill="#ffffff" rx="6" />
  <!-- Grid -->
  <g opacity="0.6"><line x1="0" y1="0" x2="0" y2="74" stroke="#e8e8e8" stroke-width="0.5" /><line x1="54" y1="0" x2="54" y2="74" stroke="#e8e8e8" stroke-width="0.5" /><line x1="0" y1="0" x2="74" y2="0" stroke="#e8e8e8" stroke-width="0.5" /><line x1="0" y1="54" x2="74" y2="54" stroke="#e8e8e8" stroke-width="0.5" /></g>
  <!-- Keys (rendered bottom-to-top for depth order) -->
  <g opacity="0.4"><rect x="2" y="3" width="50" height="50" rx="4" fill="rgba(0,0,0,0.15)" /><rect x="2" y="2" width="50" height="50" rx="4" fill="url(#grad_cccccc)" stroke="rgb(163,163,163)" stroke-width="0.8" /><rect x="2" y="2" width="50" height="10" rx="4" fill="url(#key-highlight)" /><text x="27" y="28" text-anchor="middle" dominant-baseline="central" font-size="7" fill="rgba(0,0,0,0.15)" font-family="monospace">—</text></g>
  <!-- Attribution -->
  <text x="70" y="70" text-anchor="end" font-size="7" fill="#ccc" font-family="sans-serif">Generated by Keyboard Dev Toolkit</text>
</svg>"
`;

exports[`exportSVG > snapshot: homing key (n: true) 1`] = `
"<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 74 74" width="74" height="74" style="max-width:100%;height:auto" role="img" aria-label="Untitled">
  <defs><linearGradient id="grad_cccccc" x1="0%" y1="0%" x2="0%" y2="100%">
      <stop offset="0%" stop-color="rgb(212,212,212)" />
      <stop offset="30%" stop-color="#cccccc" />
      <stop offset="85%" stop-color="rgb(184,184,184)" />
      <stop offset="100%" stop-color="rgb(167,167,167)" />
    </linearGradient><linearGradient id="key-highlight" x1="0%" y1="0%" x2="0%" y2="100%">
    <stop offset="0%" stop-color="rgba(255,255,255,0.35)" />
    <stop offset="50%" stop-color="rgba(255,255,255,0)" />
  </linearGradient></defs>
  <!-- Background -->
  <rect width="100%" height="100%" fill="#ffffff" rx="6" />
  <!-- Grid -->
  <g opacity="0.6"><line x1="0" y1="0" x2="0" y2="74" stroke="#e8e8e8" stroke-width="0.5" /><line x1="54" y1="0" x2="54" y2="74" stroke="#e8e8e8" stroke-width="0.5" /><line x1="0" y1="0" x2="74" y2="0" stroke="#e8e8e8" stroke-width="0.5" /><line x1="0" y1="54" x2="74" y2="54" stroke="#e8e8e8" stroke-width="0.5" /></g>
  <!-- Keys (rendered bottom-to-top for depth order) -->
  <g><rect x="2" y="3" width="50" height="50" rx="4" fill="rgba(0,0,0,0.15)" /><rect x="2" y="2" width="50" height="50" rx="4" fill="url(#grad_cccccc)" stroke="rgb(163,163,163)" stroke-width="0.8" /><rect x="2" y="2" width="50" height="10" rx="4" fill="url(#key-highlight)" /><rect x="23" y="46" width="8" height="3" rx="1.5" fill="rgba(0,0,0,0.35)" /><text x="27" y="28" text-anchor="middle" dominant-baseline="central" font-size="7" fill="rgba(0,0,0,0.15)" font-family="monospace">—</text></g>
  <!-- Attribution -->
  <text x="70" y="70" text-anchor="end" font-size="7" fill="#ccc" font-family="sans-serif">Generated by Keyboard Dev Toolkit</text>
</svg>"
`;

exports[`exportSVG > snapshot: single 1u key with default color 1`] = `
"<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 74 74" width="74" height="74" style="max-width:100%;height:auto" role="img" aria-label="Untitled">
  <defs><linearGradient id="grad_cccccc" x1="0%" y1="0%" x2="0%" y2="100%">
      <stop offset="0%" stop-color="rgb(212,212,212)" />
      <stop offset="30%" stop-color="#cccccc" />
      <stop offset="85%" stop-color="rgb(184,184,184)" />
      <stop offset="100%" stop-color="rgb(167,167,167)" />
    </linearGradient><linearGradient id="key-highlight" x1="0%" y1="0%" x2="0%" y2="100%">
    <stop offset="0%" stop-color="rgba(255,255,255,0.35)" />
    <stop offset="50%" stop-color="rgba(255,255,255,0)" />
  </linearGradient></defs>
  <!-- Background -->
  <rect width="100%" height="100%" fill="#ffffff" rx="6" />
  <!-- Grid -->
  <g opacity="0.6"><line x1="0" y1="0" x2="0" y2="74" stroke="#e8e8e8" stroke-width="0.5" /><line x1="54" y1="0" x2="54" y2="74" stroke="#e8e8e8" stroke-width="0.5" /><line x1="0" y1="0" x2="74" y2="0" stroke="#e8e8e8" stroke-width="0.5" /><line x1="0" y1="54" x2="74" y2="54" stroke="#e8e8e8" stroke-width="0.5" /></g>
  <!-- Keys (rendered bottom-to-top for depth order) -->
  <g><rect x="2" y="3" width="50" height="50" rx="4" fill="rgba(0,0,0,0.15)" /><rect x="2" y="2" width="50" height="50" rx="4" fill="url(#grad_cccccc)" stroke="rgb(163,163,163)" stroke-width="0.8" /><rect x="2" y="2" width="50" height="10" rx="4" fill="url(#key-highlight)" /><text x="27" y="28" text-anchor="middle" dominant-baseline="central" font-size="7" fill="rgba(0,0,0,0.15)" font-family="monospace">—</text></g>
  <!-- Attribution -->
  <text x="70" y="70" text-anchor="end" font-size="7" fill="#ccc" font-family="sans-serif">Generated by Keyboard Dev Toolkit</text>
</svg>"
`;

exports[`exportSVG > snapshot: single 1u key with label 1`] = `
"<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 74 74" width="74" height="74" style="max-width:100%;height:auto" role="img" aria-label="Untitled">
  <defs><linearGradient id="grad_cccccc" x1="0%" y1="0%" x2="0%" y2="100%">
      <stop offset="0%" stop-color="rgb(212,212,212)" />
      <stop offset="30%" stop-color="#cccccc" />
      <stop offset="85%" stop-color="rgb(184,184,184)" />
      <stop offset="100%" stop-color="rgb(167,167,167)" />
    </linearGradient><linearGradient id="key-highlight" x1="0%" y1="0%" x2="0%" y2="100%">
    <stop offset="0%" stop-color="rgba(255,255,255,0.35)" />
    <stop offset="50%" stop-color="rgba(255,255,255,0)" />
  </linearGradient></defs>
  <!-- Background -->
  <rect width="100%" height="100%" fill="#ffffff" rx="6" />
  <!-- Grid -->
  <g opacity="0.6"><line x1="0" y1="0" x2="0" y2="74" stroke="#e8e8e8" stroke-width="0.5" /><line x1="54" y1="0" x2="54" y2="74" stroke="#e8e8e8" stroke-width="0.5" /><line x1="0" y1="0" x2="74" y2="0" stroke="#e8e8e8" stroke-width="0.5" /><line x1="0" y1="54" x2="74" y2="54" stroke="#e8e8e8" stroke-width="0.5" /></g>
  <!-- Keys (rendered bottom-to-top for depth order) -->
  <g><rect x="2" y="3" width="50" height="50" rx="4" fill="rgba(0,0,0,0.15)" /><rect x="2" y="2" width="50" height="50" rx="4" fill="url(#grad_cccccc)" stroke="rgb(163,163,163)" stroke-width="0.8" /><rect x="2" y="2" width="50" height="10" rx="4" fill="url(#key-highlight)" /><text x="27" y="30" text-anchor="middle" dominant-baseline="central" font-size="13" fill="#000000" font-family="Monaco, Menlo, 'Ubuntu Mono', Consolas, monospace" font-weight="600">A</text></g>
  <!-- Attribution -->
  <text x="70" y="70" text-anchor="end" font-size="7" fill="#ccc" font-family="sans-serif">Generated by Keyboard Dev Toolkit</text>
</svg>"
`;

exports[`exportSVG > snapshot: single rotated key (r=15) 1`] = `
"<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 74 74" width="74" height="74" style="max-width:100%;height:auto" role="img" aria-label="Untitled">
  <defs><linearGradient id="grad_cccccc" x1="0%" y1="0%" x2="0%" y2="100%">
      <stop offset="0%" stop-color="rgb(212,212,212)" />
      <stop offset="30%" stop-color="#cccccc" />
      <stop offset="85%" stop-color="rgb(184,184,184)" />
      <stop offset="100%" stop-color="rgb(167,167,167)" />
    </linearGradient><linearGradient id="key-highlight" x1="0%" y1="0%" x2="0%" y2="100%">
    <stop offset="0%" stop-color="rgba(255,255,255,0.35)" />
    <stop offset="50%" stop-color="rgba(255,255,255,0)" />
  </linearGradient></defs>
  <!-- Background -->
  <rect width="100%" height="100%" fill="#ffffff" rx="6" />
  <!-- Grid -->
  <g opacity="0.6"><line x1="0" y1="0" x2="0" y2="74" stroke="#e8e8e8" stroke-width="0.5" /><line x1="54" y1="0" x2="54" y2="74" stroke="#e8e8e8" stroke-width="0.5" /><line x1="0" y1="0" x2="74" y2="0" stroke="#e8e8e8" stroke-width="0.5" /><line x1="0" y1="54" x2="74" y2="54" stroke="#e8e8e8" stroke-width="0.5" /></g>
  <!-- Keys (rendered bottom-to-top for depth order) -->
  <g transform="rotate(15 27 27)"><rect x="2" y="3" width="50" height="50" rx="4" fill="rgba(0,0,0,0.15)" /><rect x="2" y="2" width="50" height="50" rx="4" fill="url(#grad_cccccc)" stroke="rgb(163,163,163)" stroke-width="0.8" /><rect x="2" y="2" width="50" height="10" rx="4" fill="url(#key-highlight)" /><text x="27" y="28" text-anchor="middle" dominant-baseline="central" font-size="7" fill="rgba(0,0,0,0.15)" font-family="monospace">—</text></g>
  <!-- Attribution -->
  <text x="70" y="70" text-anchor="end" font-size="7" fill="#ccc" font-family="sans-serif">Generated by Keyboard Dev Toolkit</text>
</svg>"
`;

exports[`exportSVG > snapshot: stepped key (l: true) 1`] = `
"<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 74 74" width="74" height="74" style="max-width:100%;height:auto" role="img" aria-label="Untitled">
  <defs><linearGradient id="grad_cccccc" x1="0%" y1="0%" x2="0%" y2="100%">
      <stop offset="0%" stop-color="rgb(212,212,212)" />
      <stop offset="30%" stop-color="#cccccc" />
      <stop offset="85%" stop-color="rgb(184,184,184)" />
      <stop offset="100%" stop-color="rgb(167,167,167)" />
    </linearGradient><linearGradient id="key-highlight" x1="0%" y1="0%" x2="0%" y2="100%">
    <stop offset="0%" stop-color="rgba(255,255,255,0.35)" />
    <stop offset="50%" stop-color="rgba(255,255,255,0)" />
  </linearGradient></defs>
  <!-- Background -->
  <rect width="100%" height="100%" fill="#ffffff" rx="6" />
  <!-- Grid -->
  <g opacity="0.6"><line x1="0" y1="0" x2="0" y2="74" stroke="#e8e8e8" stroke-width="0.5" /><line x1="54" y1="0" x2="54" y2="74" stroke="#e8e8e8" stroke-width="0.5" /><line x1="0" y1="0" x2="74" y2="0" stroke="#e8e8e8" stroke-width="0.5" /><line x1="0" y1="54" x2="74" y2="54" stroke="#e8e8e8" stroke-width="0.5" /></g>
  <!-- Keys (rendered bottom-to-top for depth order) -->
  <g><rect x="2" y="3" width="50" height="50" rx="4" fill="rgba(0,0,0,0.15)" /><rect x="2" y="2" width="50" height="50" rx="4" fill="url(#grad_cccccc)" stroke="rgb(163,163,163)" stroke-width="0.8" /><rect x="2" y="2" width="50" height="10" rx="4" fill="url(#key-highlight)" /><rect x="2" y="2" width="12.5" height="50" rx="4" fill="rgb(188,188,188)" /><rect x="13.5" y="2" width="1" height="50" fill="rgba(0,0,0,0.08)" /><text x="27" y="28" text-anchor="middle" dominant-baseline="central" font-size="7" fill="rgba(0,0,0,0.15)" font-family="monospace">—</text></g>
  <!-- Attribution -->
  <text x="70" y="70" text-anchor="end" font-size="7" fill="#ccc" font-family="sans-serif">Generated by Keyboard Dev Toolkit</text>
</svg>"
`;
